# SWAT-DG

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: SA_and_Calibration_Methods_Report.md  TECHNICAL_DOCUMENTATION.md  api_reference.md  installation.md  quickstart.md  user_manual.md
packaging/: BUILD_PROCESS.md  CHANGELOG_v0.6.0.md  README.md  build_portable.py  installer.iss  test_dialog.cs
src/swat_modern/: __init__.py
src/swat_modern/app/: __init__.py  _win32_dialog.ps1  _win32_dialog.py  calibration_runner.py  loading_utils.py  main.py  session_persistence.py
src/swat_modern/app/pages/: 1_Project_Setup.py  2_Watershed_Map.py  3_Simulation_Results.py  4_Observation_Data.py  5_Parameter_Editor.py  6_Calibration.py  7_Results.py
src/swat_modern/calibration/: __init__.py  boundary_manager.py  calibrator.py  diagnostic_calibrator.py  diagnostics.py  load_calculator.py  objectives.py  parameters.py  phased_calibrator.py  sequential.py  simulation_optimizer.py  spotpy_setup.py
src/swat_modern/core/: __init__.py  config.py  model.py  results.py  runner.py
src/swat_modern/data/: __init__.py  dem.py  landcover.py  soil.py  weather.py
src/swat_modern/io/: __init__.py  nwis_loader.py  observation_loader.py  unit_converter.py  wq_observation_loader.py
src/swat_modern/io/converters/: __init__.py  converter.py  parameter_mapper.py  routing_builder.py  swat2012_writer.py  swatplus_reader.py  weather_converter.py
src/swat_modern/io/generators/: __init__.py  parameter_modifier.py
src/swat_modern/io/parsers/: __init__.py  bsn_parser.py  cio_parser.py  fig_parser.py  mgt_parser.py  output_parser.py  parameter_reader.py  result_browser.py  sol_parser.py
src/swat_modern/spatial/: __init__.py  map_builder.py  shapefile_loader.py
src/swat_modern/visualization/: __init__.py  dashboard.py  diagnostics.py  duration_curve.py  hydrograph.py  metrics_table.py  plotly_charts.py  scatter.py  sensitivity.py
swat_dg-0.6.1/src/swat_modern/calibration/: calibrator.py
